                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 05-06-2005 added: Faster path lookups in CFileItemList (for DirectoryCache mainly) thanks to desertbear.
 - 05-05-2005 fixed: minor crash fix when switching between gui and fullscreen
 - 05-06-2005 fixed: PAPlayer correctly handles track changes where the number of channels changes + handles 6 channel tracks correctly.
 - 04-06-2005 added: sf.net patch [1209466] Multiple RSS feeds concatenated - thanks to desertbear!
 - 04-06-2005 fixed: long rss feeds could crash xbmc when using ttf fonts.
 - 04-06-2005 added: All Winamp milkdrops "Winamp-presets(436).zip", no shortened filenames. Zip 'normal' compression used.
 - 04-06-2005 changed: Ogg codec now uses the FileReader.
 - 04-06-2005 changed: Updated MPCCodec.dll so that MPC files use the FileReader.
 - 04-06-2005 updated: [ 1212669 ] Newest BiosIDs.ini (Thnx to bubbadood)
 - 04-06-2005 changed: added zipped G-Force presetfiles.
 - 04-06-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 04-06-2005 updated: German language file
 - 04-06-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 04-06-2005 updated: Finnish language file (Thnx to jutski)
 - 04-06-2005 updated: Norwegian language file (Thnx to vnm)
 - 04-06-2005 added: HttpApi Slideshow commands
 - 04-06-2005 fixed: File manager, context menu option "select all" does not select all items
 - 04-06-2005 changed: unified dll load/unload in paplayer codecs by using the section loader
 - 03-06-2005 added: G-Force - Ability to select a folder or a zip file for presets from the xml config.
 - 03-06-2005 fixed: stupidity in zip code. big preset zips should be handled more graciously.