@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 05-05-2005 added: Write to log when memory allocation failes in a dll
+ - 05-05-2005 fixed: memory overrun when reading EEPROM (not as bad as it sounds). HalReadSMBusValue() allways touched 4bytes on each call.
  - 05-06-2005 added: Faster path lookups in CFileItemList (for DirectoryCache mainly) thanks to desertbear.
  - 05-05-2005 fixed: minor crash fix when switching between gui and fullscreen
  - 05-06-2005 fixed: PAPlayer correctly handles track changes where the number of channels changes + handles 6 channel tracks correctly.
